#13 Ajout de test sur la CookieFactory et sur la FactoryCustomerSide